# social-network

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  start-reload.sh  start.sh  test.sh
api/alembic/: env.py
api/alembic/versions/: 17b638a48bad_add_more_user_information_fields.py  1adaa2a9bbc0_add_chat_actions.py  24b30afc50ac_add_optional_target_user_to_chat_action.py  37a57bc5c3c7_initial_revision.py  5528411a0203_split_chats_to_direct_and_group_and_.py  56e81edb37a8_add_latest_message_to_the_chat.py  62a178ed3370_add_fields_to_user.py  72588739e54d_add_invite_code_to_group_chat.py  7cb88cc08866_add_groups.py  820110107520_add_file_table.py  83b7c263c158_add_avatars_to_group_chats.py  97743b168b1a_add_last_read_message_to_chat.py  9c0f2e329761_add_chats.py  acb7d3d22453_add_friend_requests.py  ce1f92505be6_add_last_seen_time_to_user.py  d5167aa20026_add_friends.py  f01cbfd15911_add_latest_message_to_the_chat.py  fd24c9b42f14_add_last_edit_date_to_message.py
api/app/: config.py  main.py  security.py  storage.py
api/app/api/: api.py  dependencies.py
api/app/crud/: __init__.py  base.py  chat.py  direct_chat.py  group.py  group_chat.py  message.py  text_message.py  user.py  user_info.py
api/app/db/: database.py  init_db.py
api/app/models/: __init__.py  association_tables.py  chat.py  chat_action.py  file.py  group.py  message.py  user.py  user_info.py
api/app/schemas/: __init__.py  chat.py  chat_action.py  file.py  group.py  (+4 more)
(+221 files in other folders)
